add enable-native-access