@@ -50,6 +50,7 @@
                             <java.awt.headless>true</java.awt.headless>
                         </systemPropertyVariables>
                         <argLine>
+                            --enable-native-access=ALL-UNNAMED
                             --add-opens=java.base/java.net=ALL-UNNAMED
                             --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                             -Dpolyglot.engine.WarnInterpreterOnly=false
